== 0.24.2

* Enhancements
  * Updated to Contour 1.1.2

== 0.24.1 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

== 0.24.0 (January 2, 2013)

* Enhancements
  * Project Changes
    * Major rework of the project show page to better reflect boards and tags
      * This rework is aimed at improving the flexibility of the project page in order to discourage users from using stickies index
      * Contains three views
        * Completed: Completed sorted by due date due date descending, (today into the past)
        * Past due: Not completed sorted by due date due date descending, (today into the past)
        * Upcoming: Not completed sorted by due date ascending, (today into the future)
        * Direction of these views can be reversed, useful to see stickies with no due date assigned
      * Stickies can be dragged onto different boards
      * Stickies can be tagged by dragging stickies onto tags
  * Calendar Changes
    * Sticky editing and viewing from the calendar has changed to use an redesigned popup similar to the one used on the new project page
  * Sticky Changes
    * Multiple stickies completed at once will now send out a single email per user
    * Stickies can now be repeated daily, weekly, monthly, or yearly
      * Upon completing a sticky that has either day, week, month, or year set, a new copy of that sticky is created 1 [day, week, month, year] later
      * The number can also be set, so a sticky could be done every 2 days
  * Group Changes
    * New Boards can now be created when creating a group
  * Updated to Contour 1.1.2.pre

* Bug Fix
  * Fixed a bug that prevented grouped stickies assigned to a board from being moved back to the holding pen
  * Fixed a bug that sent sticky completion emails out by who it was assigned to as opposed to who marked the sticky as completed

== 0.23.10 (December 12, 2012)

* Bug Fix