@@ -77,14 +77,13 @@ class GroupsControllerTest < ActionController::TestCase
     login(users(:service_account))
     assert_difference('Sticky.count', templates(:one).items.size) do
       assert_difference('Group.count') do
-        post :create, template_id: templates(:one), board_id: nil, initial_due_date: '01/02/2013', api_token: 'screen_token', screen_token: users(:valid).screen_token, format: 'json'
-        # post :create, group: { project_id: projects(:one), template_id: templates(:one), board_id: boards(:one) }, api_token: 'screen_token', screen_token: users(:valid).screen_token, format: 'json'
+        post :create, group: { project_id: projects(:one), template_id: templates(:one), board_id: boards(:one), initial_due_date: '01/02/2013' }, api_token: 'screen_token', screen_token: users(:valid).screen_token, format: 'json'
       end
     end
     assert_not_nil assigns(:template)
     assert_not_nil assigns(:group)
     assert_equal templates(:one).items.size, assigns(:group).stickies.size
-    # assert_equal boards(:one), assigns(:board) # Put back in when commented line above is replaced
+    assert_equal boards(:one), assigns(:board)
     assert_equal users(:valid), assigns(:group).user
     assert_equal assigns(:group).to_json, response.body
     assert_response :success
